# knet

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DEPS  Doxyfile  KeksNL.sln  KeksNL.vcxproj  KeksNL.vcxproj.filters  LICENSE  README.md  build.py  common.gypi  configure.py  keksnl.make  knet.gyp  makefile  premake5  premake5.lua  toolchain.gypi
include/: BitStream.h  CBitStream.h  Common.h  DatagramHeader.h  DatagramPacket.h  EventHandler.h  Peer.h  ReliabilityLayer.h  ReliablePacket.h  bitstream.h  bitstream.impl.h  inetwork.h  network_helper_types.h  peer.h  reliability_layer.h  variable_delta_serializer.h
include/Sockets/: BerkleySocket.h  ISocket.h  SocketAddress.h  berkley_socket.h  socket_address.h
include/internal/: DatagramHeader.h  DatagramPacket.h  EventHandler.h  ReliablePacket.h  datagram_header.h  datagram_packet.h  event_handler.h  function_traits.h  helper_types.h  reliable_packet.h
include/sockets/: berkley_socket.h  isocket.h  socket_address.h
src/: BitStream.cpp  CBitStream.cpp  KeksNL.cpp  Peer.cpp  ReliabilityLayer.cpp  kNet.cpp  peer.cpp  reliability_layer.cpp
src/Sockets/: BerkleySocket.cpp
src/sockets/: berkley_socket.cpp
test/: test.cpp  test_bitstream.cpp  test_connect.cpp
tools/: gyp_knet.py
